# yakr

./: .gitignore  CERTIFICATION.md  Dockerfile  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.vps-charlie.yml  docker-compose.yml  pyproject.toml  whitepaper.md
.cursor/rules/: public-vs-private.mdc
.github/ISSUE_TEMPLATE/: certification_application.yml
.github/workflows/: ci.yml
apps/yakr-android/: README.md  pyproject.toml
apps/yakr-android/src/yakr/: __init__.py
certification/: IMPLEMENTERS.md  README.md  client-checklist.md  relay-checklist.md
certification/badge/: README.md  preview.html
docs/: DOCUMENTATION-LICENSE.md  REFERENCE_DESIGN.md  SECURITY_BACKLOG.md  demo-vps-charlie.md  homelab-relay.md  target-audience.md
docs/adr/: 006-pq-library.md  007-presence-and-group-relays.md  008-nat-reachability-and-mobile-delivery.md  009-ephemeral-cloud-relay.md  010-offline-mesh-transports.md  011-optional-platform-wake.md  012-relay-capability-tokens.md
docs/html/: crypto.html  delivery.html  examples.html  index.html  lifecycle.html  overview.html
docs/html/assets/: app.js  style.css
docs/reviews/: external-critique-2026-07-10.md  external-ratchet-review-f16-issue-2-2026-07-11.md  github-follow-up-critique-2026-07-10.md  phase-11-independent-critique-2026-07-11.md  ratchet-self-review-2026-07-11.md
docs/security/: analysis-v1.md  session-ratchet-review-v1.md
docs/spec/: delivery-state-machine.md  double-ratchet.md  ephemeral-messages.md  errata-v1.md  fetch-algorithm.md  five-peer-homelab-relay-test.md  glossary.md  mesh-testing-and-resilience.md  multi-device.md  negative-vector-outcomes-v1.md  offline-pairing.md  operator-identity-v1.md  pairing-transcript-v1.md  phase-1-single-hop.md  phase-10-presence.md  phase-11-implementation-readiness.md  phase-2-two-hop.md  phase-3-path-rotation.md  phase-4-invites.md  phase-5-profiles.md  phase-6-hybrid-pq.md  phase-7-metadata.md  phase-8-mobile.md  phase-9-interop.md  platform-wake-v1.md  presence-minimal.md  presence-v1.md  profile-replay-policy.md  relay-authorization.md  relay-capability-v1.md  relay-failover.md  relay-observer-privacy-v1.md  relay-rendezvous.md  tls-endpoints.md  tls-pin-lifecycle.md  yakr-protocol-v1.md
docs/spec/test-vectors-v1/: delivery_profile.json  double_ratchet.json  inner_message.json  inner_receipt.json  invite.json  mailbox_tag.json  outer_blob.json  pairing_transcript.json
docs/spec/test-vectors-v1/negative/: README.md  cbor.json  invite.json  outer_blob.json  pairing.json  ratchet.json
interop/: README.md
interop/blind-review/: FEEDBACK-TEMPLATE.md  MANIFEST.md  README.md  SLICE-1.md  SLICE-2.md
rust/: Cargo.toml  RUST_PORT.md
rust/yakr-cli/: Cargo.toml
rust/yakr-cli/src/: interop.rs  main.rs
rust/yakr-core/: Cargo.toml
rust/yakr-core/src/: ephemeral.rs  error.rs  hybrid_pq.rs  identity.rs  invite.rs  lib.rs  mailbox.rs  message.rs  pairing.rs  privacy.rs  ratchet.rs  session.rs  store.rs
rust/yakr-core/tests/: session.rs
rust/yakr-crypto/: Cargo.toml
rust/yakr-crypto/src/: aead.rs  cbor.rs  delivery_profile.rs  encoding.rs  hkdf.rs  hybrid.rs  inner_message.rs  invite.rs  lib.rs  mailbox.rs  master.rs  outer_blob.rs  x25519.rs
rust/yakr-relay/: Cargo.toml
rust/yakr-relay/src/: app.rs  lib.rs  main.rs  store.rs
rust/yakr-relay/tests/: abuse.rs
scripts/: certification_self_test.sh  create_blind_review_bundle.sh  demo_hybrid_pairing.py  demo_hybrid_pairing.sh  demo_invite_pairing.py  demo_invite_pairing.sh  demo_offline_delivery.sh  demo_profile_delivery.py  demo_profile_delivery.sh  demo_relay_group_pairing.py  demo_relay_group_pairing.sh  demo_two_hop_delivery.sh  demo_vps_charlie_relay.sh  deploy_charlie_vps.sh  deploy_dennis_vps.sh  generate_operator_relay_tls.py  homelab_relay_deploy.sh  homelab_tailscale.env.sh  homelab_tailscale.local.env.example  hybrid_homelab_stress.py  run_homelab_tailscale.sh  setup_network.py  setup_vps_charlie_demo.py  stress_charlie_mesh.py
