[project]
name = "yakr-workspace"
version = "0.1.0"
description = "Yakr reference implementation workspace"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
pythonpath = ["packages/yakr-core/src", "packages/yakr-relay/src", "packages/yakr-cli/src", "packages/yakr-mobile/src", "packages/yakr-testkit/src"]
asyncio_mode = "auto"
