[package]
name = "yakr-core"
description = "Yakr Protocol v1.0 reference library (Rust)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
ciborium = "0.2.2"
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
yakr-crypto = { path = "../yakr-crypto" }

[dev-dependencies]
tempfile = "3"
