[package]
name = "yakr-crypto"
description = "Yakr Protocol v1.0 cryptographic primitives (Rust reference)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
