[package]
name = "yakr-crypto"
description = "Yakr Protocol v1.0 cryptographic primitives (Rust reference)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
ciborium = "0.2.2"
ed25519-dalek = "3.0.0"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
