[package]
name = "yakr-crypto"
description = "Yakr Protocol v1.0 cryptographic primitives (Rust reference)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10"
ciborium = "0.2.2"
ed25519-dalek = "3.0.0"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
