[package]
name = "yakr-relay"
description = "Yakr Protocol v1.0 relay daemon (Rust)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "yakr-relay"
path = "src/main.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
yakr-core = { path = "../yakr-core" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
